# NDK

Andfix/: settings.gradle
Andfix/app/: build.gradle
Andfix/app/src/androidTest/java/com/bryanrady/andfix/: ExampleInstrumentedTest.java
Andfix/app/src/assets/: out.dex  out3.dex
Andfix/app/src/main/: AndroidManifest.xml
Andfix/app/src/main/cpp/: art_method.h  native-lib.cpp
Andfix/app/src/main/java/com/bryanrady/andfix/: Caculator.java  DexManager.java  MainActivity.java  MyApplication.java  Replace.java
Andfix/app/src/main/res/layout/: activity_main.xml
Andfix/app/src/test/java/com/bryanrady/andfix/: ExampleUnitTest.java
Andfix/gradle/wrapper/: gradle-wrapper.properties
BsDiff/: settings.gradle
BsDiff/app/: CMakeLists.txt  build.gradle
BsDiff/app/src/androidTest/java/com/example/bsdiff/: ExampleInstrumentedTest.java
BsDiff/app/src/main/: AndroidManifest.xml
BsDiff/app/src/main/cpp/: native-lib.cpp
BsDiff/app/src/main/java/com/example/bsdiff/: MainActivity.java
BsDiff/app/src/main/res/layout/: activity_main.xml
BsDiff/app/src/main/res/xml/: file_paths.xml
BsDiff/app/src/test/java/com/example/bsdiff/: ExampleUnitTest.java
BsDiff/gradle/wrapper/: gradle-wrapper.properties
Douyin/: settings.gradle
Douyin/app/: CMakeLists.txt  build.gradle
Douyin/app/src/androidTest/java/com/bryanrady/douyin/: ExampleInstrumentedTest.java
Douyin/app/src/main/: AndroidManifest.xml
Douyin/app/src/main/cpp/: FaceTrack.cpp  FaceTrack.h  native-lib.cpp
Douyin/app/src/main/cpp/FaceAlignment/: CMakeLists.txt
Douyin/app/src/main/cpp/FaceAlignment/src/: sift.cpp
Douyin/app/src/main/java/com/bryanrady/douyin/: MainActivity.java  VideoPlayActivity.java  VideoRecordActivity.java
Douyin/app/src/main/java/com/bryanrady/douyin/face/: Face.java  (+1 more)
Douyin/app/src/main/res/drawable/: record_press_button_background.xml
Douyin/app/src/main/res/layout/: activity_camera_preview.xml  activity_main.xml  activity_video_play.xml
Douyin/app/src/main/res/raw/: base_vertex_shader.vert  bigeye_fragment_shader.frag  camera_fragment_shader.frag  camera_vertex_shader.vert  soul_fragment_shader.frag  soul_vertex_shader.vert
Douyin/app/src/test/java/com/bryanrady/douyin/: ExampleUnitTest.java
Douyin/gradle/wrapper/: gradle-wrapper.properties
FFmpeg/app/: CMakeLists.txt  build.gradle
FFmpeg/app/src/androidTest/java/com/bryanrady/ffmpeg/: ExampleInstrumentedTest.java
FFmpeg/app/src/main/: AndroidManifest.xml
FFmpeg/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  DNFFmpeg.cpp  DNFFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h  safe_queue2.h
FFmpeg/app/src/main/java/com/bryanrady/ffmpeg/: DNPlayer.java  MainActivity.java  OtherActivity.java  PlayActivity.java
FFmpeg/app/src/main/res/layout/: activity_main.xml  activity_other.xml  activity_play.xml
FFmpeg/app/src/main/res/layout-land/: activity_play.xml
FFmpeg/app/src/test/java/com/bryanrady/ffmpeg/: ExampleUnitTest.java
FFmpeg/gradle/wrapper/: gradle-wrapper.properties
FaceTracking/: settings.gradle
FaceTracking/app/: CMakeLists.txt  build.gradle
FaceTracking/app/src/androidTest/java/com/example/facetracking/: ExampleInstrumentedTest.java
FaceTracking/app/src/main/: AndroidManifest.xml
FaceTracking/app/src/main/cpp/: native-lib.cpp
FaceTracking/app/src/main/java/com/example/facetracking/: CameraHelper.java  MainActivity.java  Utils.java
FaceTracking/app/src/main/res/values/: strings.xml
FaceTracking/gradle/wrapper/: gradle-wrapper.properties
GifLoad/: settings.gradle
GifLoad/app/: CMakeLists.txt  build.gradle
GifLoad/app/src/androidTest/java/com/bryanrady/gifload/: ExampleInstrumentedTest.java
GifLoad/app/src/main/: AndroidManifest.xml
GifLoad/app/src/main/cpp/: native-lib.cpp
GifLoad/app/src/main/cpp/libgif/: CMakeLists.txt
GifLoad/app/src/main/java/com/bryanrady/gifload/: GifHandler.java  MainActivity.java
GifLoad/app/src/main/res/layout/: activity_main.xml
GifLoad/app/src/main/res/values/: strings.xml
GifLoad/app/src/test/java/com/bryanrady/gifload/: ExampleUnitTest.java
GifLoad/gradle/wrapper/: gradle-wrapper.properties
JniExample/app/: CMakeLists.txt  build.gradle
JniExample/app/src/androidTest/java/com/bryanrady/example/: ExampleInstrumentedTest.java
JniExample/app/src/main/: AndroidManifest.xml
JniExample/app/src/main/cpp/: native-lib.cpp
JniExample/app/src/main/java/com/bryanrady/example/: Girl.java  MainActivity.java
JniExample/app/src/main/res/layout/: activity_main.xml
JniExample/app/src/test/java/com/bryanrady/example/: ExampleUnitTest.java
JniExample/gradle/wrapper/: gradle-wrapper.properties
MkExample/: settings.gradle
MkExample/app/: CMakeLists.txt  build.gradle
MkExample/app/src/androidTest/java/com/bryanrady/mkexample/: ExampleInstrumentedTest.java
MkExample/app/src/main/: AndroidManifest.xml
MkExample/app/src/main/cmake/: aa.c  native-lib.cpp  test1.cpp
MkExample/app/src/main/cmake/include/: test1.h
MkExample/app/src/main/java/com/bryanrady/mkexample/: MainActivity.java
MkExample/app/src/main/ndkBuild/: Android.mk  ef.cpp  native-lib.cpp
MkExample/app/src/main/res/values/: strings.xml
MkExample/app/src/test/java/com/bryanrady/mkexample/: ExampleUnitTest.java
MkExample/gradle/wrapper/: gradle-wrapper.properties
Rtmp/: settings.gradle
Rtmp/app/: CMakeLists.txt  build.gradle
Rtmp/app/src/androidTest/java/com/bryanrady/rtmp/: ExampleInstrumentedTest.java
Rtmp/app/src/main/: AndroidManifest.xml
Rtmp/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp
Rtmp/app/src/main/cpp/librtmp/: CMakeLists.txt  rtmp.c
Rtmp/app/src/main/java/com/bryanrady/rtmp/: AudioChannel.java  CameraHelper.java  LivePusher.java  MainActivity.java  VideoChannel.java
Rtmp/app/src/main/res/layout/: activity_main.xml
Rtmp/app/src/main/res/values/: strings.xml
Rtmp/app/src/test/java/com/bryanrady/rtmp/: ExampleUnitTest.java
Rtmp/gradle/wrapper/: gradle-wrapper.properties
(+30 files in other folders)
